revisione della Button Navigation

--- a/src/main/resources/templates/photos/show.html
+++ b/src/main/resources/templates/photos/show.html
@@ -48,7 +48,7 @@
     </main>
 
     <!-- Footer per Button Navigation -->
-    <footer class="container d-flex justify-content-end">
+    <footer class="container d-flex justify-content-end gap-2 py-3">
 
         <div class="d-flex flex-row-reverse gap-2">
             <a th:href="@{/photos}" class="btn btn-primary">Torna all'elenco</a>
