--- a/src/main/resources/templates/photos/index.html
+++ b/src/main/resources/templates/photos/index.html
@@ -61,7 +61,11 @@
     </main>
 
     <!-- Footer per Button Navigation -->
-    <footer>
+    <footer class="container d-flex justify-content-end gap-2 py-3">
+
+        <div class="d-flex flex-row-reverse gap-2">
+            <a th:href="@{/photos/create}" class="btn btn-success">Aggiungi foto</a>
+        </div>
 
     </footer>
 
