--- a/src/main/resources/templates/categories/index.html
+++ b/src/main/resources/templates/categories/index.html
@@ -18,17 +18,14 @@
     <main>
         <div class="container">
 
-            <div class="list-group">
+            <!-- Se non ci sono Category -->
+            <h3 th:if="${categories.isEmpty()}" class="text-danger text-center">
+                Non sono presenti categorie! Aggiungine una!
+            </h3>
 
-                <a th:href="@{/categories/{id}(id=${category.id})}"
-                    class="list-group-item list-group-item-action d-flex justify-content-between"
-                    th:each="category : ${categories}">
-                    <span class="text-primary">[[${category.name}]]</span>
-                    <span
-                        th:class="${category.photos.size() == 0 ? 'text-danger pe-4' : 'text-success pe-4'}">[[${category.photos.size()}]]</span>
-                </a>
-
-            </div>
+            <!-- Se ci sono Category -->
+            <div th:unless="${categories.isEmpty()}"
+                th:replace="~{fragments/list :: list-group(${categories}, 'categories')}"></div>
 
         </div>
     </main>
