--- a/src/main/resources/templates/photos/edit.html
+++ b/src/main/resources/templates/photos/edit.html
@@ -12,6 +12,9 @@
 
 <body class="bg-dark text-white">
 
+    <!-- Navbar -->
+    <nav th:replace="~{fragments/navbar :: navbar('photos')}"></nav>
+
     <!-- Titolo pagina -->
     <header class="py-3">
         <h1 class="text-center">Modifica [[${photo.title}]]</h1>
