--- a/src/main/resources/templates/photos/show.html
+++ b/src/main/resources/templates/photos/show.html
@@ -16,6 +16,9 @@
 
 <body class="bg-dark text-white">
 
+    <!-- Navbar -->
+    <nav th:replace="~{fragments/navbar :: navbar('photos')}"></nav>
+
     <!-- Titolo pagina -->
     <header class="py-3">
         <h1 class="text-center">[[${photo.title}]]</h1>
