--- a/src/main/resources/templates/tags/create.html
+++ b/src/main/resources/templates/tags/create.html
@@ -9,6 +9,9 @@
 
 <body class="bg-dark text-white">
 
+    <!-- Navbar -->
+    <nav th:replace="~{fragments/navbar :: navbar('tags')}"></nav>
+
     <!-- Titolo pagina -->
     <header class="py-3">
         <h1 class="text-center">Aggiungi un tag</h1>
