--- a/src/main/resources/templates/categories/show.html
+++ b/src/main/resources/templates/categories/show.html
@@ -17,7 +17,7 @@
 <body class="bg-dark text-white">
 
     <!-- Navbar -->
-    <nav th:replace="~{fragments/navbar :: navbar('photos')}"></nav>
+    <nav th:replace="~{fragments/navbar :: navbar('categories')}"></nav>
 
     <!-- Titolo pagina -->
     <header class="py-3">
