--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,6 +1,5 @@
 <th:block th:fragment="navbar(activePage)">
 
-    <!-- As a link -->
     <nav class="navbar bg-light">
         <div class="container">
 
@@ -18,6 +17,29 @@
                 <li class="nav-item">
                     <a th:class="${activePage.contains('categories')} ? 'nav-link active' : 'nav-link'"
                         th:href="@{/categories}">Categorie</a>
+                </li>
+            </ul>
+
+        </div>
+    </nav>
+
+</th:block>
+
+<th:block th:fragment="front-navbar(activePage)">
+
+    <nav class="navbar bg-light">
+        <div class="container">
+
+            <a class="navbar-brand" href="/">FotoLibro</a>
+
+            <ul class="navbar-nav d-flex flex-row gap-2">
+                <li class="nav-item">
+                    <a th:class="${activePage.contains('photos')} ? 'nav-link active' : 'nav-link'" aria-current="page"
+                        th:href="@{/}">Foto</a>
+                </li>
+                <li class="nav-item">
+                    <a th:class="${activePage.contains('tags')} ? 'nav-link active' : 'nav-link'"
+                        th:href="@{/tags}">Tags</a>
                 </li>
             </ul>
 
