aggiunta funzionalità di ricerca per titolo di Photo in homepage

--- a/src/main/resources/templates/front/homepage.html
+++ b/src/main/resources/templates/front/homepage.html
@@ -31,7 +31,7 @@
         <div class="container">
 
             <!-- Barra di ricerca per titolo -->
-            <form action="" method="get" class="py-3">
+            <form class="py-3">
                 <input class="form-control col-4" type="text" name="photo" id="photoQuery"
                     placeholder="Inserire titolo della foto da ricercare...">
             </form>
