predisposizione del login in navbar al posto di Tag

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -38,8 +38,7 @@
                         th:href="@{/}">Foto</a>
                 </li>
                 <li class="nav-item">
-                    <a th:class="${activePage.contains('tags')} ? 'nav-link active' : 'nav-link'"
-                        th:href="@{/tags}">Tags</a>
+                    <a th:class="${activePage.contains('tags')} ? 'nav-link active' : 'nav-link'" href="#">Login</a>
                 </li>
             </ul>
 
