--- a/src/main/resources/templates/fragments/filter.html
+++ b/src/main/resources/templates/fragments/filter.html
@@ -12,7 +12,7 @@
     <div th:class="${elementFilter.contains('tags')} ? 'tagsFilter' : 'categoriesFilter' ">
         <h5 th:text="${elementFilter.contains('tags')} ? 'Tag' : 'Categorie' ">Tag</h5>
 
-        <div th:class="${elementFilter.contains('tags')} ? 'tagsChecbox' : 'categoriesChecbox' ">
+        <div th:id="${elementFilter.contains('tags')} ? 'tagsCheckbox' : 'categoriesCheckbox' ">
 
             <input type="checkbox" class="btn-check" id="btncheck1" autocomplete="off">
             <label class="btn btn-outline-info" for="btncheck1">Checkbox 1</label>
