--- a/src/main/resources/templates/front/show.html
+++ b/src/main/resources/templates/front/show.html
@@ -32,12 +32,15 @@
 
             </div>
 
+            <!-- Se autenticato -->
             <div sec:authorize="isAuthenticated()" class="form-floating text-black col-4">
                 <textarea class="form-control" name="addComment" placeholder="Aggiungi un commento"
                     id="commentAdd"></textarea>
                 <label for="commentAdd">Aggiungi un commento</label>
+                <a id="commentBtn" href="#">Aggiungi commento</a>
             </div>
 
+            <!-- Se non autenticato -->
             <div sec:authorize="!isAuthenticated()" class="form-floating text-black col-4">
                 <textarea class="form-control" name="addComment" placeholder="Aggiungi un commento" id="commentAdd"
                     disabled></textarea>
